{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 8,
  "lineage": "04afaca3-655a-577a-e700-39f0942de2e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431617346510:internet-gateway/igw-0a194d73c5bcd83d5",
            "id": "igw-0a194d73c5bcd83d5",
            "owner_id": "431617346510",
            "vpc_id": "vpc-0f16b5e266b315872"
          },
          "dependencies": [
            "aws_vpc.amazonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431617346510:route-table/rtb-0a5570a9f00c97031",
            "id": "rtb-0a5570a9f00c97031",
            "owner_id": "431617346510",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a194d73c5bcd83d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f16b5e266b315872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.amazonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083c8a3263e03c006",
            "route_table_id": "rtb-0a5570a9f00c97031",
            "subnet_id": "subnet-0603b64fa68700541"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.route-public",
            "aws_subnet.main",
            "aws_vpc.amazonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431617346510:security-group/sg-0d1b63347d53bbf6c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d1b63347d53bbf6c",
            "ingress": [],
            "name": "terraform-20220216045324108300000001",
            "name_prefix": "terraform-",
            "owner_id": "431617346510",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f16b5e266b315872"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.amazonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431617346510:subnet/subnet-0603b64fa68700541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603b64fa68700541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "431617346510",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet"
            },
            "tags_all": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0f16b5e266b315872"
          },
          "dependencies": [
            "aws_vpc.amazonvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "amazonvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431617346510:vpc/vpc-0f16b5e266b315872",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf802d94554035a9",
            "default_route_table_id": "rtb-0ee77b17529f6f6b4",
            "default_security_group_id": "sg-09d413b18d9fd4fe0",
            "dhcp_options_id": "dopt-038856f3c974d45da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f16b5e266b315872",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee77b17529f6f6b4",
            "owner_id": "431617346510",
            "tags": {
              "name": "amazon"
            },
            "tags_all": {
              "name": "amazon"
            }
          }
        }
      ]
    }
  ]
}